k8s/apps/changedetection/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - watch-test.k8s.thelabdesk.com
      secretName: wildcard-k8s-tls
  rules:
    - host: watch-test.k8s.thelabdesk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 80
