k8s/apps/changedetection/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: changedetection-test
  labels:
    pod-security.kubernetes.io/enforce: baseline
